# cwl-rs

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml  coverage.yml
src/: lib.rs  main.rs  v11.rs  v11_clt.rs  v11_cm.rs  v11_wf.rs
tests/: common.rs  v11_clt.rs  v11_wf.rs
tests/examples/: prefactor-ampl.cwl  prefactor-calib-cal.cwl  prefactor-create-image.cwl  prefactor-createmap-cal.cwl  prefactor-do-magic.cwl  prefactor-examine-npys.cwl  prefactor-fitclock.cwl  prefactor-h5imp_cal.cwl  prefactor-ndpp-prep-cal.cwl  prefactor-phase.cwl  prefactor-plot-cal-phases.cwl  prefactor-plots.cwl  prefactor-sky-cal.cwl  prefactor.cwl
