[package]
name = "cwl"
version = "0.1.0"
description = "The Common Workflow Language (CWL) object model for Rust."
authors = ["Onno Valkering"]
repository = "https://github.com/onnovalkering/cwl-rs"
documentation = "https://docs.rs/cwl"
keywords  = ["cwl"]
edition = "2018"
license = "MIT"
exclude = [
    ".github/*",
    ".editorconfig",
    ".gitignore",
    ".travis.yml",
    "Dockerfile",
    "rustfmt.toml",
]

[dependencies]
failure = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.3"
serde_yaml = "0.8"
