[package]
name = "cwl"
version = "0.1.0"
description = "The Common Workflow Language (CWL) object model for Rust."
authors = ["Onno Valkering"]
repository = "https://github.com/onnovalkering/cwl-rs"
documentation = "https://docs.rs/cwl"
keywords  = ["common-workflow-language", "cwl"]
edition = "2018"
license = "MIT"
exclude = [
    ".github/*",
    ".editorconfig",
    ".gitignore",
    "rustfmt.toml",
]

[dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_with = "1.9"
serde_yaml = "0.8"
